# permc

./: CMakeLists.txt  README.md
inc/: perm.h
src/: perm.c
tests/: perm_test.c
