cmake_minimum_required (VERSION 3.11)
project (permc)
enable_language (C)
add_library (permc src/perm.c)
target_include_directories (permc PUBLIC inc)

include (CTest)
enable_testing ()

file (GLOB TestsToRun tests/*.c)
set (TestNames)
foreach (test_to_run ${TestsToRun})
    get_filename_component (TestName ${test_to_run} NAME_WE)
    if (NOT TestName MATCHES ".+_test$")
        continue ()
    endif ()
    list (APPEND TestNames ${TestName})
    add_test (NAME ${TestName} COMMAND RunTests ${TestName})
endforeach ()
create_test_sourcelist (Tests test_driver.c ${TestNames})

add_executable (RunTests)
target_sources (RunTests PRIVATE test_driver.c ${TestsToRun})
target_link_libraries (RunTests permc)
